[tool.poetry]
authors = [ "KiARC <kiarc@kiarc.win>" ]
description = "A Modular Discord Bot Framework based on pycord"
license = "GPL-3.0"
name = "mdbf"
packages = [ { include = "mdbf", from = "src" } ]
readme = "README.md"
version = "0.3.0"

[tool.poetry.dependencies]
PyYAML = "^6.0.1"
"py-cord" = "^2.6.0"
python = "^3.12"
toml = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]
