[project]
authors = [ { name = "KiARC", email = "kiarc@kiarc.win" } ]
dependencies = [ "py-cord>=2.6.0,<3", "PyYAML>=6.0.1,<7", "toml>=0.10.2,<0.11" ]
description = "A Modular Discord Bot Framework based on pycord"
license = "GPL-3.0"
license-files = [ "LICENSE" ]
name = "mdbf"
readme = "README.md"
requires-python = "~=3.12.0"
version = "0.4.1"

[dependency-groups]
dev = [ "types-pyyaml>=6.0.12.20250516", "types-toml>=0.10.8.20240310" ]

[build-system]
build-backend = "uv_build"
requires = [ "uv_build~=0.8.3" ]
